<resources>
    <string name="app_name">SPOTTR</string>
    <string name="lt_back"><![CDATA[< Back]]></string>
    <string name="report_incident">Report Incident</string>
    <string name="address">Address</string>
    <string name="enter_location_and_address">Enter location and address</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="select_date_eg_yyyy_mm_dd">Select date. eg. yyyy-MM-dd</string>
    <string name="description">Description</string>
    <string name="type_here">Type Here . . .</string>
    <string name="customize_alert_actions">Customize Alert Actions</string>
    <string name="incident_history">Incident History</string>
    <string name="location_settings">Location Settings</string>
    <string name="enable_location_tracking">Enable Location Tracking</string>
    <string name="open_system_location_settings">Open System Location Settings</string>
    <string name="sign_in_to_your_account">Sign in to your\nAccount</string>
    <string name="enter_your_email_and_password_to_log_in">Enter your email and password to log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome_to_spottr_your_privacy_is_important_to_us_this_privacy_policy_explains_how_spottr_collects_uses_and_protects_your_personal_data_we_collect_data_to_improve_your_experience_your_personal_data_will_never_be_sold_you_can_opt_out_of_tracking_anytime_by_accepting_you_agree_to_our_terms_and_privacy_policy">Welcome to Spottr! Your privacy is important to us. This Privacy Policy explains how Spottr collects, uses, and protects your personal data. We collect data to improve your experience. Your personal data will never be sold. You can opt out of tracking anytime. By accepting, you agree to our terms and privacy policy.</string>
    <string name="i_have_read_and_agree_to_the_privacy_policy">I have read and agree to the Privacy Policy</string>
    <string name="accept">Accept</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile picture</string>
    <string name="loading">Loading...</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="set_password">Set Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="category_general">Category: General</string>
    <string name="priority_medium">Priority: Medium</string>
    <string name="sound">Sound</string>
    <string name="test">Test</string>
</resources>