<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#0D0D1A"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_settings"
        android:textColor="#A0B9E1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="50dp"/>

    <Switch
        android:id="@+id/switchLocation"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/enable_location_tracking"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnSystemSettings"
        android:text="@string/open_system_location_settings"
        android:backgroundTint="#1A1F2E"
        android:textColor="#A0B9E1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
