<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#0D0D1A"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="#A0B9E1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="50dp"/>

        <!-- Scrollable Policy Text -->
        <TextView
            android:id="@+id/tvPolicyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:text="@string/welcome_to_spottr_your_privacy_is_important_to_us_this_privacy_policy_explains_how_spottr_collects_uses_and_protects_your_personal_data_we_collect_data_to_improve_your_experience_your_personal_data_will_never_be_sold_you_can_opt_out_of_tracking_anytime_by_accepting_you_agree_to_our_terms_and_privacy_policy"
            android:layout_marginBottom="24dp"/>

        <!-- Agreement Checkbox -->
        <CheckBox
            android:id="@+id/checkAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_have_read_and_agree_to_the_privacy_policy"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="24dp"
            android:textSize="16sp"/>

        <!-- Accept Button -->
        <Button
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:backgroundTint="#1A1F2E"
            android:textColor="#A0B9E1"
            android:padding="12dp"
            />

    </LinearLayout>
</ScrollView>
